--- a/TaskManagementSystem/TaskManagementSystem.csproj
+++ b/TaskManagementSystem/TaskManagementSystem.csproj
@@ -8,6 +8,9 @@
 
   <ItemGroup>
     <PackageReference Include="Automapper" Version="14.0.0" />
+    <PackageReference Include="FirebaseAdmin" Version="3.1.0" />
+    <PackageReference Include="Google.Apis" Version="1.69.0" />
+    <PackageReference Include="MailKit" Version="4.13.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.13" />
@@ -20,7 +23,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameWorkCore.SqlServer" Version="9.0.3" />
-    <PackageReference Include="Microsoft.EntityFrameWorkCore.Tools" Version="9.0.3">
+    <PackageReference Include="Microsoft.EntityFrameWorkCore.Tools" Version="8.0.17">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
