--- a/TaskManagementSystem/appsettings.json
+++ b/TaskManagementSystem/appsettings.json
@@ -13,15 +13,15 @@
     "JwtConfig":{
       "ValidAudience": "https://localhost:5270",
       "ValidIssuer": "https://localhost:5270",
-      "Secret": "jfztlhivbnvrbwzgmiupzlbyrhwmjfba"
+      "Secret": "SecretKey"
     },
     "Firebase" :{
       "ProjectId" :  "tms-project-ecf1f",
-      "CredentialsPath": "~/tms-project-ecf1f-firebase-adminsdk-fbsvc-e3e67c3414.json"
+      "CredentialsPath": "CredentialPath"
     },
     "EmailSettings":{
-      "UserName": "genz.greatness@gmail.com",
-      "Password" : "cwqz cnkl kmbf bhuk",
+      "UserName": "UserNameEmail",
+      "Password" : "UserEmailPassword",
       "SmtpServer": "smtp.gmail.com",
       "Port": 587
     },
