--- a/TaskManagementSystem/TaskManagementSystem.csproj
+++ b/TaskManagementSystem/TaskManagementSystem.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>817d8cdb-17a2-4284-ab39-923c2da3a3a5</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
