hide email password

--- a/TaskManagementSystem/appsettings.json
+++ b/TaskManagementSystem/appsettings.json
@@ -19,12 +19,12 @@
       "ProjectId" :  "tms-project-ecf1f",
       "CredentialsPath": "CredentialPath"
     },
-    "EmailSettings":{
-      "UserName": "UserNameEmail",
-      "Password" : "UserEmailPassword",
-      "SmtpServer": "smtp.gmail.com",
-      "Port": 587
-    },
+      "EmailSettings":{
+        "UserName": "genz.greatness@gmail.com",
+        "Password" : "",
+        "SmtpServer": "smtp.gmail.com",
+        "Port": 587
+      },
 
   "AllowedHosts": "*"
 }
