--- a/TaskManagementSystem/.gitignore
+++ b/TaskManagementSystem/.gitignore
@@ -1,7 +1,11 @@
-*.vs
+.vs/
+.vscode/
+
 *.json
 bin/
 obj/
+
+tms-project-ecf1f-firebase-adminsdk-fbsvc-e3e67c3414.json
 
 /taskmanagementsystem.sln
 /taskmanagementsystem/.vs/
